piserver/public/stylesheets/style.css
body {
  padding: 50px;
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
}

a {
  color: #00B7FF;
}

header h1{
	color: #fff !important;
	text-shadow: 0 1px 0 #111 !important;
}

#button-group{
	width: 60%;
	max-width: 400px;
	margin: 0 auto;
}

#logo, .ui-input-text, .ui-controlgroup-controls {
	width:60% !important;
	max-width: 350px !important;
	min-width:250px !important;
	margin: 20px auto !important;
	display:block;
}

.icons{
	margin: 0 auto;
	display: block;
	padding:20px;
}

.ui-icon-back{
	padding: 2px !important;
}

#photos_list_container, #photos_list_container_newslide{
	display: block;
	width: 100%;
	max-width: 800px;
	margin: 0 auto;
}

form{
	width:60%;
	margin: 0 auto !important;
}

.ui-page{
	background-image: url('../images/whitediamond.png');
	background-repeat: repeat;
}

.selected{
	opacity: .8;
}

.selected_photo{
	background-color: #98ff98;
}

.selected_photo .selected_check_img{
	display: block !important;
}

.selected_check_img{
	width:36px !important;
	position: absolute;
	top:0;
	right:0;
}

.visible{
	display: block !important;
}

.photoset-cell{
	position: relative;
}

.invisible{
	opacity: 0 !important;
	filter: alpha(opacity=0) !important;
}

#deletebtn{
	display:none;
	position: absolute;
	top:0;
	left:0;
	width:100%;
	background-color: red;
	color: #fff;
	text-shadow:none !important;
	margin: 0 !important;
}

.ui-grid-b .ui-block-a,
.ui-grid-b .ui-block-b,
.ui-grid-b .ui-block-c{
	width:32.3% !important;
	padding:1% !important;
}

